--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--header section starts-->
     <header class="header">
-        <a href="#" class="logo"><i class='bx bxs-dog'></i></i> Em-Patados</a>
+        <a href="#" class="logo"><i class="fa-solid fa-shield-dog"></i> Em-Patados</a>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#services">Services</a>
@@ -34,6 +34,22 @@
     </header>
 
     <!--header section end-->    
+
+    <!--home section starts-->
+    <section class="home" id="home">
+        <div class="image">
+            <img src="img/home-image.svg" alt="">
+        </div>
+        <div class="content">
+            <h3>Stay safe, Stay healthy</h3>
+            <p>La mamá de la mamá de la mamá de la mamá de la mamá de la mamá de la mamá de la mamá</p>
+            <a href="#" class="btn"> Contact us <span class="fas fa-chevron-right"></span></a>
+        </div>
+
+
+    </section>
+
+    <!--home section end-->
 
 <!--custom js file-->    
 <script src="js/script.js"></script>
